Minor fixes - Fixed bug where sending a long chat message that was a single word would cause a horizontal scroll bar to appear - Added maximum lengths of text boxes (26 characters limit on prompt boxes)

--- a/public/scss/index.scss
+++ b/public/scss/index.scss
@@ -160,6 +160,9 @@ $backgroundGradient: linear-gradient(to top left, #000, #404040);
 					.colon {
 						margin-right: 4px;
 					}
+					.message {
+						word-break: break-word;
+					}
 				}
 				.chat-line.serverMsg {
 					background-color: #ccc;
